[project]
name = "mcp-demo-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.1.1",
    "langchain-groq>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langgraph>=1.0.4",
    "mcp>=1.23.1",
]
